# NoTopicYet

./: .gitignore  .mdlrc  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  flake8.yml  markdownlint.yml  pytest.yml
docs/: architecture.md  requirements.md
results/scalers/: used_scaler.joblib
results/trained_models/: DecisionTreeClassifier_model_42.joblib  KNeighborsClassifier_model.joblib  KNeighborsClassifier_model_42.joblib  LinearDiscriminantAnalysis_model.joblib  QuadraticDiscriminantAnalysis_model.joblib  RandomForestClassifier_model_42.joblib
results/trained_models/classifier/: QuadraticDiscriminantAnalysis_model_42.joblib  RandomForestClassifier_model_42.joblib
results/trained_models/regressor/: LogisticRegressionCV_model_42.joblib  LogisticRegression_model_42.joblib
src/: __init__.py  explorative-data-analysis.py
src/heartpredict/: cli.py  main.py
src/heartpredict/backend/: data.py  descriptive-analysis.py  descriptive.py  io.py  ml.py  survival.py
src/notopicyet/: __init__.py  main.py
tests/: conftest.py  test_data.py  test_io.py  test_ml.py  test_skeleton.py  test_survival.py
tests/results/trained_models/: LinearDiscriminantAnalysis_model_42.joblib  RandomForestClassifier_model_42.joblib
