[project]
name = "notopicyet"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "iron3oxide", email = "hello@iron3oxi.de" },
    { name = "HokageM", email = "m.trzaska663@gmail.com"}
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
no_topic_yet = "notopicyet.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notopicyet"]
