[project]
name = "heartpredict"
version = "0.1.0"
description = "HeartPredict is a Python library designed to analyze and predict heart failure outcomes using patient data."
authors = [
    { name = "iron3oxide", email = "hello@iron3oxi.de" },
    { name = "HokageM", email = "m.trzaska663@gmail.com" },
    { name = "valbo451", email = "valentin.boehm@studium.uni-hamburg.de" }
]
dependencies = [
    "typer>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hp = "heartpredict.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/heartpredict"]
