[project]
name = "heartpredict"
version = "0.1.0"
description = "HeartPredict is a Python library designed to analyze and predict heart failure outcomes using patient data."
authors = [
    { name = "iron3oxide", email = "hello@iron3oxi.de" },
    { name = "HokageM", email = "m.trzaska663@gmail.com" },
    { name = "valbo451", email = "valentin.boehm@studium.uni-hamburg.de" }
]
dependencies = [
    "typer>=0.12.3",
    "pandas>=1.2.4",
    "numpy>=1.20.3",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "lifelines==0.28.0",
    "matplotlib>=3.4.2",
    "pytest>=6.2.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hp = "heartpredict.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff.lint]
select = ["B", "E", "F"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/heartpredict"]
